--- a/css/style.css
+++ b/css/style.css
@@ -869,7 +869,7 @@ ul.no-list {
 }
 
 .main-title .title-content {
-  font-size: 55px;
+  font-size: 50px;
 }
 
 .main-title .title-content h1 {
@@ -890,6 +890,10 @@ ul.no-list {
   text-align: right;
   font-size: 15px;
   padding-top: 15px;
+}
+
+.title-breadcrumbs .teflon {
+  font-size: 10px;
 }
 
 .visualConfirm {
@@ -982,6 +986,7 @@ ul.no-list {
   border-radius: 7px;
   height: 70px;
 }
+.panel-info.active,
 .side-panel-info.active {
   background-color: #6f5499;
 }
@@ -1048,6 +1053,10 @@ ul.no-list {
 .side-panel-title {
   font-size: 17px;
   padding-left: 5px;
+}
+
+.option-panel-title {
+  font-size: 17px;
 }
 
 .panel-title h1 {
@@ -1271,6 +1280,19 @@ ol, ul {
 }
 .side-menu-title h2 {
   display: inline;
+}
+
+.summary-box .title {
+  font-size: 16px;
+  padding: 0 10px;
+}
+
+.summary-box .description {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.horz-line {
+  border-bottom: 1px solid #6f5499;
 }
 
 #global-actions>li {
