--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,3 @@
-<?php session_start();
-
-	$username 	    = $_SESSION[SESSION_KEY_NAME];
-	$loginAttempt 	= $_SESSION[SESSION_KEY_LOGIN];
-	$registerAttempt= $_SESSION[SESSION_KEY_REGISTER];
-	$userid		      = $_SESSION[SESSION_KEY_USERID];
-
-  if (isset($_SESSION[SESSION_KEY_LOGIN])) {
-    echo "<script>
-      window.location.href = 'main.php#/';
-          </script> ";
-  }
- ?>
-
   <div id="main">
     <div class="container login-register">
       <div class="row">
@@ -24,7 +10,7 @@
       </div>
       <div class="row">
         <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-          <div ng-include="'templates/login-form.php'"></div>
+          <div ng-include="'templates/login-form.html'"></div>
         </div>
       </div>
     </div>  
