--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,10 @@
       <div class="clearfix">
         <div class="row">
           <div class="col-lg-6">
-            <div class="home-header-jumbo">
-              <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="120" width="120">
+            <div class="home-header">
+              <div class="logo">
+                <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="120" width="120">
+              </div>
               <h1 class="animated fadeIn">opal <strong>ADMIN</strong> </h1>
             </div>
           </div>
