--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,15 @@
   <div id="main">
-    <div class="container login-register">
+    <div class="login-container col-md-4 col-md-offset-4">
       <div class="row">
-        <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3"> 
-          <div class="login-logo">
+        <div class="login-header">
+          <div class="logo">
             <img class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="200" width="200">
-            <h1><b>opal</b> ADMIN</h1>
           </div>
+          <h1><strong>opal</strong> ADMIN</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-          <div ng-include="'templates/login-form.html'"></div>
-        </div>
+        <div ng-include="'templates/login-form.html'"></div>
       </div>
     </div>  
     <div class="bannerMessage alert-success">{{bannerMessage}}</div>                       
