--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -1,7 +1,9 @@
           <div ng-controller="sidePanelMenuController">
             <div class="row side-logo" ng-click="goToHome()">
               <div class="col-md-12">
-                <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
+                <div class="logo">
+                  <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
+                </div>
                 <h1>opal <strong>ADMIN</strong> </h1>
               </div>
             </div>      
