--- Page content now hidden during session timeout     --- Reduced session timeout to 6 minutes of inactivity

--- a/templates/patient-activity.html
+++ b/templates/patient-activity.html
@@ -1,5 +1,5 @@
   <div id="main">
-    <div id="top">
+    <div id="top" ng-if="isAuthorized([userRoles.admin])"> 
       <div class="clearfix">
         <div class="row">
           <div class="col-md-2">
