--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -257,7 +257,7 @@
                           <input type="password" class="form-control" required="required" ng-blur="validatePassword(newPatient.password)" ng-change="passwordUpdate()" ng-model="newPatient.password">
                           <span ng-show="validPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validPassword.status == 'valid', 'glyphicon-remove': validPassword.status == 'invalid', 'glyphicon-warning-sign': validPassword.status == 'warning'}" aria-hidden="true"></span>
                         </div>
-                        <em class="control-label col-md-3" ng-show="validPassword.status == 'invalid' || validPassword == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
+                        <em class="control-label col-md-3" ng-show="validPassword.status == 'invalid' || validPassword.status == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
                           {{validPassword.message}}
                         </em>
                       </div>    
