--- Added user registration

--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -156,15 +156,15 @@
             <div class="row main-title">
               <div class="col-md-6 title-content">
                 <span class="glyphicon glyphicon-list-alt"></span>
-                <h1><strong>Registration</strong></h1>
+                <h1><strong>Patient Registration</strong></h1>
               </div>
               <div class="col-md-6 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span> 
+                  <span><a ui-sref="home">Home</a></span> 
                   <span class="glyphicon glyphicon-menu-right teflon"></span> 
-                  <span><a href="#/patients">Patients</a></span>
+                  <span><a ui-sref="patient">Patients</a></span>
                   <span class="glyphicon glyphicon-menu-right teflon"></span>
-                  <span><strong>Registration</strong></span>
+                  <span><strong>Patient Registration</strong></span>
                 </span>
               </div>
             </div>    
