--- a/templates/post.html
+++ b/templates/post.html
@@ -38,7 +38,7 @@
                   <div id="data-table">
                     <div class="gridStyle" ui-grid="gridOptions" ui-grid-resize-columns style="height:720px"></div>
                     <div class="table-buttons" style="text-align: center;">
-                      <form method="post" ng-submit="submitPublishFlags()">
+                      <form method="post" ng-submit="submitFlags()">
                         <input class="btn btn-primary" ng-class="{'disabled': !changesMade}" type="submit" value="Save Changes">
                       </form>
                     </div>
