--- Created a registrant role         -- This role can only view a list and register patients
    --- Removed explicit role restrictions on templates
        -- This logic is already taken care of in the app config

--- a/templates/add-alias.html
+++ b/templates/add-alias.html
@@ -1,5 +1,5 @@
   <div id="main">
-    <div id="top" ng-if="isAuthorized([userRoles.admin])">
+    <div id="top">
       <div class="clearfix">
         <div class="row">
           <div class="col-md-2" style="position:fixed;">
