--- a/templates/add-test-result.html
+++ b/templates/add-test-result.html
@@ -1,5 +1,5 @@
   <div id="main">
-    <div id="top" ng-if="isAuthorized([userRoles.admin])">
+    <div id="top">
       <div class="clearfix">
         <div class="row">
           <div class="col-md-2" style="position:fixed;">
