--- Changed user-readable instances of "Alias" to "Tasks/Appointments/Documents"

--- a/templates/add-alias.html
+++ b/templates/add-alias.html
@@ -207,15 +207,15 @@
             <div class="row main-title">
               <div class="col-md-6 title-content">
                 <span class="glyphicon glyphicon-plus"></span>
-                <h1><strong>Add Alias</strong></h1>
+                <h1><strong>Add Task, Appointment, or Document</strong></h1>
               </div>
               <div class="col-md-6 title-breadcrumbs"> 
                 <span>
                   <span><a href="#/">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/alias">Aliases</a></span>
+                  <span><a href="#/alias">TAD</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><strong>Add Alias</strong></span>
+                  <span><strong>Add TAD</strong></span>
                 </span>
               </div>
             </div>    
