--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -23,7 +23,7 @@
                   <div class="side-panel-info" ng-class="{active: currentPage == 'alias'}">
                     <div class="panel-content">
                       <span style="font-size: 23px;" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-                      <div class="side-panel-title">Aliases</div>
+                      <div class="side-panel-title" style="font-size:13px;">Tasks/Appts/Docs</div>
                     </div>
                   </div>
                 </div>
