--- a/templates/alias.html
+++ b/templates/alias.html
@@ -9,10 +9,10 @@
             <div class="row main-title">
               <div class="col-md-6 title-content">
                 <span class="glyphicon glyphicon-cloud"></span>
-                <h1><strong>Aliases</strong></h1>
+                <h1><strong>Tasks / Appointments / Documents</strong></h1>
               </div>
               <div class="col-md-6 title-breadcrumbs"> 
-                <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Aliases</strong></span>
+                <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>TAD</strong></span>
               </div>
             </div>    
             <div class="panel-container" style="text-align:left">
@@ -60,7 +60,7 @@
       </div>
       <div class="modal-body">
         <div class="bs-callout bs-callout-danger">
-          <h4>Alias Delete</h4>
+          <h4>TAD Delete</h4>
           <p class="deleteText">Are you sure you want to delete the alias "{{aliasToDelete.name_EN}}" ?</p>
           <form method="post" ng-submit="deleteAlias()">			
             <input class="btn btn-primary" type="submit" value="Delete">
@@ -73,7 +73,7 @@
       <div class="modal-header">
         <h2 class="modal-title">
           <span class="glyphicon glyphicon-pencil" style="font-size: 30px;"></span> 
-          Edit Alias: {{alias.name_EN}} / {{alias.name_FR}}
+          Edit TAD: {{alias.name_EN}} / {{alias.name_FR}}
           <span style="float:right;"> 
             <form method="post" ng-submit="updateAlias()">
               <input class="btn btn-primary" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
