--- a/templates/home.html
+++ b/templates/home.html
@@ -27,10 +27,10 @@
                       <span style="font-size: 50px;" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
                     </div>
                     <div class="panel-title">  
-                      <h1>Aliases</h1>
+                      <h1>Tasks/Appts/Docs</h1>
                     </div>  
                     <div class="panel-description">
-                      <p>Tool for grouping, translating, and publishing internal clinical codes.</p>
+                      <p>Tool for grouping, translating, and publishing tasks, appointments, and documents.</p>
                     </div>
                   </div>
                 </div>
